fix scrollbar gutter to stable

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ a:hover {
   color: #535bf2;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   margin: 0;
   width: 100vw; /* Ensure full width */
